manifests/local/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biteful-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
spec:
  ingressClassName: nginx

  rules:
    - host: localhost
      http:
        paths:
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /api/register
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /api/recipes
            pathType: Prefix
            backend:
              service:
                name: recipe-service
                port:
                  number: 80

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: recipe-service
                port:
                  number: 80

          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: recipe-service
                port:
                  number: 80

          - path: /api/plans
            pathType: Prefix
            backend:
              service:
                name: recipe-service
                port:
                  number: 80
